# ml-con-workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
modules/module-0/: JOURNAL.md  kind.yaml
modules/module-1/: .gitignore  JOURNAL.md  pyproject.toml  requirements.txt
modules/module-1/solution/: requirements.txt  train_basic.py  train_with_mlflow.py
modules/module-1/starter/: train_basic.py  train_with_mlflow.py
modules/module-2/: JOURNAL.md  pyproject.toml  requirements.txt
modules/module-2/solution/: requirements.txt  service_basic.py  service_with_validation.py
modules/module-2/starter/: bentofile.yaml  service_basic.py  service_with_validation.py
modules/module-3/: JOURNAL.md  deploy.sh  load-image.sh
modules/module-3/solution/: deployment.yaml
modules/module-3/starter/: deployment.yaml
modules/module-4/: Dockerfile  JOURNAL.md  build.sh  deploy.sh  deployment.yaml
modules/module-4/solution/: Dockerfile  gateway_solution.go  go.mod
modules/module-4/starter/: gateway.go  go.mod
modules/module-5/: JOURNAL.md
modules/module-5/kserve/: rbac-fix.yaml
modules/module-5/model/: Dockerfile  recommender.py  requirements.txt  serve.py
modules/module-5/scripts/: install-kserve.sh  install-kubeflow.sh  verify-installation.sh
modules/module-5/solution/: pipeline_with_deploy.yaml  recommendation_pipeline_solution.py  requirements.txt
modules/module-5/starter/: recommendation_pipeline.py
modules/module-6/: JOURNAL.md  predict.js
modules/module-7/: setup-simple.sh
(+16 files in other folders)
