[project]
name = "ml-con-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.0",
    "black>=23.10.0",
    "datasets>=2.14.0",
    "fastapi>=0.104.0",
    "mlflow>=3.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.24.1",
    "transformers>=4.35.0",
    "uvicorn>=0.24.0",
]

[tool.uv.workspace]
members = [
    "modules/module-1",
    "modules/module-2",
]
