[project]
name = "module-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=2.14.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.0.0",
    "mlflow>=2.8.0",
    "numpy>=1.24.0",
    "pytest>=7.4.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.66.0",
    "transformers>=4.35.0",
]
