[project]
name = "module-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.0",
    "mlflow>=2.8.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.24.1",
    "transformers>=4.35.0",
]
